<resources>
	<string name="app_name">مدافعان وطن</string>
	<string name="welcome_text">مقام معظم رهبری:\nامروزه زنده نگه داشتن یاد و خاطره شهدا کمتر از شهادت نیست.</string>
	<string name="home_page_button_1">زندگی نامه شهدا</string>
	<string name="home_page_button_2">وصیت نامه شهدا</string>
	<string name="home_page_button_3">نقشه عملیات ها</string>
	<string name="home_page_button_4_5">تاریخچه و جزئیات جنگ</string>
	<string name="home_page_button_6">جانبازان گرانقدر</string>
	<string name="home_page_button_0">مقدمه</string>
	<string name="drawer_string_home">صفحه اصلی</string>
	<string name="drawer_string_settings">تنظیمات</string>
	<string name="drawer_string_comments">انتقادات و پیشنهادات</string>
	<string name="drawer_string_add_content">افزودن مطلب</string>
	<string name="drawer_string_contact_us">ارتباط با ما</string>
	<string name="drawer_string_about_us">درباره ما</string>
	<string name="string_introduction">مقدمه</string>
	<string name="introduction_string_value_the_blood">قدر خون شهدا را بدانیم</string>
	<string name="biography_string_title">زندگی نامه شهدا</string>
	<string name="in_the_name_of_allah">بسم الله الرَّحمن الرَّحیم</string>
	<string name="app_settings_string_title">تنظیمات</string>
	<string name="biography_string_bottom">مثل شهدا خدا را بشناسیم</string>
	<string name="testament_string_title">وصیت نامه شهدا</string>
	<string name="testament_string_bottom">به وصیت شهدا عمل کنیم</string>
	<string name="operations_string_title">نقشه عملیات ها</string>
	<string name="operations_string_bottom">ما به شهدا مدیونیم</string>
	<string name="drawer_string_download_content">دریافت اطلاعات</string>
	<string name="drawer_string_repair_content">تعمیر اطلاعات</string>
	<string name="drawer_string_help">راهنما</string>
	<string name="app_settings_string_nick_name">نام مستعار</string>
	<string name="app_settings_string_font">فونت نرم افزار</string>
	<string name="app_settings_string_font_size">اندازه قلم</string>
	<string name="about_us_string_in_the_name_of_god">به نام خدا</string>
	<string name="veterans_string_title">جانبازان گرانقدر</string>
	<string name="veterans_string_bottom">ما ملت شهادتیم</string>
	<string name="contact_us_string_follow_us">مهدویون در فضای مجازی</string>
	<string name="string_send">ارسال</string>
	<string name="comments_string_place_holder">پیشنهاد و یا انتقاد شما…</string>
	<string name="drawer_string_title_tools">ابزار</string>
	<string name="drawer_string_share_app">معرفی به دوستان</string>
	<string name="string_please_connect">لطفا به اینترنت متصل شوید</string>
	<string name="json_download_volley_fail_string">خطایی در بارگیری اطلاعات رخ داد</string>
	<string name="download_volley_string_check_connection">بررسی اتصال…</string>
	<string name="download_volley_string_downloading">دریافت اطلاعات…</string>
	<string name="save_state_string_saved">ذخیره شد</string>
	<string name="app_settings_string_please_fill_nick_name">لطفا نام مستعار خود را وارد کنید</string>
	<string name="util_dialog_positive_button">تایید</string>
	<string name="util_dialog_negative_button">لغو</string>
	<string name="app_settings_string_please_choose_nick_name">لطفا یک نام مستعار برای خود انتخاب کنید</string>
	<string name="app_settings_string_please_restart_app">برای اعمال کامل تنظیمات انجام شده نرم افزار را دوباره اجرا کنید</string>
	<string name="app_settings_string_auto_pic_download">بارگیری خودکار تصاویر</string>
	<string name="home_page_string_check_status">بررسی وضعیت…</string>
	<string name="home_page_string_comment_not_possible">اکنون امکان ارسال نظر وجود ندارد</string>
	<string name="home_page_string_add_content_not_possible">اکنون امکان ارسال مطلب وجود ندارد</string>
	<string name="home_page_string_error_get_from_server">خطا در بارگذاری</string>
	<string name="comments_fragment_please_fill_your_comment">لطفا نظر خود را بنویسید</string>
	<string name="comments_fragment_string_sending">در حال ارسال…</string>
	<string name="comments_fragment_string_comment_sent">ارسال شد</string>
	<string name="comments_fragment_string_send_error">خطا در ارسال</string>
	<string name="send_content_fragment_string_your_text">متن شما…</string>
	<string name="send_content_fragment_string_please_fill_text">لطفا متن خود را بنویسید</string>
	<string name="home_page_download_done">بارگیری انجام شد</string>
	<string name="suggest_string_share_with">اشتراک لینک برنامه با:</string>
	<string name="suggest_string_share_text">تو هم مثل من نرم افزار مدافعان وطن رو همین الان دانلود کن و با شهدا و نحوه زندگی اون ها آشنا شو! دانلود از:\n</string>
	<string name="social_media_id">Mahdavion313_ir</string>
	<string name="biography_adapter_age">سن: </string>
	<string name="biography_string_dead_body_not_found">مفقودالاثر</string>
	
	<!-- drawer strings -->
	<string name="action_bar_drawer_toggle_open">open drawer</string>
	<string name="action_bar_drawer_toggle_close">close drawer</string>
	
	<!-- string arrays -->
	<string-array name="font_names">
		<item>ایران سنس</item>
		<item>یکان</item>
		<item>رویا</item>
		<item>کودک</item>
		<item>نازنین</item>
	</string-array>
	
	<string-array name="font_sizes">
		<item>14</item>
		<item>16</item>
		<item>18</item>
		<item>20</item>
		<item>22</item>
		<item>24</item>
	</string-array>
	
	<!-- long texts -->
	<string name="introduction_full_text">عزیزانی را از دست داده‌ایم، که بخاطر ما شهید شدند.\nگل‌هایی پرپر شدند، تا گل‌هایی به مدرسه بروند.\nوارد جنگی شده بودیم که تقصیر ما نبود.\nلحظه‌ای فکرکنیم که…\nحتی یک نفر جلوی دشمن ایستادگی نمیکرد چه میشد؟\nاز مدافعان جنگ تحمیلی و مدافعان حرم حضرت زینب(سلام‌الله‌علیها) تا پرستاران و دکتران و مدافعان سلامت که اکنون در جبهه مقاومت قرار گرفته‌اند؛ برای چه جانشان را به خطر انداختند؟\nچون دین و مذهب آن‌ها، خاک وطن آن‌ها، جان عده‌ی زیادی از مردم ایرانی و غیر ایرانی که بی‌گناه به دام مرگ می‌افتند و چه شیرین است این ایثار و از خود گذشتگی…\nو هنوز هم کسانی هستند که راه و روش آن‌ها را ادامه دهند.\nما این نرم افزار را درست کردیم بخاطر اینکه شهیدان از یادها بیرون نروند.\nدر حوزه‌ی کاری خود همین از دستمان بر می آمد که دریغ نکردیم.\nو سعی کردیم همانطور که رهبر فرموند:\n«امروزه نگه داشتن یاد و خاطره شهدا کمتر از شهادت نیست»\nبه درجه شهادت نزدیک شویم و دعا میکنیم که ان‌شاءالله به درجه شهادت نائل شویم.</string>
	<string name="about_us_full_text">گروه زینبیون متشکل از بچه های دبیرستانی مشهد است که این نرم افزار سرآغاز یک مسیر طولانی برای آنان است.\nنرم افزار مدافعان وطن درباره هر شخصی است که برای ایران و ایرانی ایثار و فداکاری کرده است، برای شهدای جنگ تحمیلی، برای مدافعان حرم و مدافعان سلامت.\nالبته نقص ها و ایراداتی هم بر این نرم افزار وارد است؛ که به یاری خدا و با نظرات و پیشنهادات شما عزیزان و همچنین با پشتکار گروه زینبیون رفع خواهد شد.\nاین نرم افزار کاملا مردمی است و متعلق به هیچ نهاد یا سازمانی نمی باشد.\nامیدواریم که عمه سادات و خاندان پاک و مطهرشان به ما نظری کنند.\n\nگروه زینبیون\nمهرماه 1399\n</string>
	<string name="veterans_full_text">در بین مردم عزیزانی هستند که به لقب شهید زنده آنها را میشناسیم.\n\nمگر میشود فراموششان کرد؟\n\nآنهایی که رفقای خود را پر پر دیدند.\nآنهایی که هر روز صحنه جنگ برایشان تداعی میشود.\nجانباز شدند و حسرتی دارند آشکار\n\nما به شهیدان زنده هم مدیونیم و از آنها تشکر و قدر دانی میکنیم\n\nو در ادامه سعی بر انتشار مصاحبه های گرفته شده از جانبازان عزیز داریم</string>
	<string name="sure_to_repair_content">با انجام این عمل تمام متن های بارگیری شده پاک، و مجددا بارگیری خواهند شد.\nدقت داشته باشید که عکس های بارگیری شده پاک نخواهند شد و نیازی به بارگیری مجدد آنها نخواهد بود.\nاز ادامه کار مطمئن هستید؟</string>
	<string name="sure_to_download_content">با انجام این عمل ابتدا وجود متون جدید بررسی شده و سپس در صورت وجود داشتن بارگیری خواهند شد.\nدقت داشته باشید که در صورتی که بعد از انجام این عمل هیچ متن جدیدی برای شما اضافه نشد بدین معناست که متن جدیدی وجود نداشته است.\nدر انجام این عملیات هیچ تصویری بارگیری نخواهد شد.\nآیا مایل به ادامه هستید؟</string>
	
	<!-- settings -->
	<string name="settings_hint_nick_name"><![CDATA[
		<b>نام مستعار</b>
		شما به عنوان نام فرستنده نظرات و مطالب مورد استفاده قرار خواهد گرفت.
	]]></string>
	
	<string name="settings_hint_font_family"><![CDATA[
		<b>فونت</b>
		جهت نمایش متن‌ها در این نرم‌افزار
	]]></string>
	
	<string name="settings_hint_font_size"><![CDATA[
		اندازه متن‌های نرم افزار
		<br/>
		<b>اندازه متن‌های صفحه‌ی اصلی، پنل کشویی و لیست اسامی تغییر نخواهند کرد</b>
	]]></string>
	
	<string name="settings_hint_auto_download"><![CDATA[
		در صورت
		<b>فعال</b>
		بودن این گزینه در هنگام پیمایش صفحات و لیست‌ها، عکس‌ها به صورت خودکار بارگیری می‌شوند.
	]]></string>
	
	<string name="settings_hint_app_update"><![CDATA[
		در صورت
		<b>فعال</b>
		بودن این گزینه، به صورت خودکار روزی یک بار وجود نسخه جدید بررسی شده و در صورت وجود، اعلانی مبنی بر به روز رسانی نرم افزار دریافت خواهید کرد.
		<br/>
		<b>این فرایند نیازمند اینترنت است</b>
	]]></string>
	
	<string name="settings_hint_new_data"><![CDATA[
		در صورت
		<b>فعال</b>
		بودن این گزینه، روزی یک بار وجود محتوای جدید بررسی شده و در صورت وجود، اعلانی مبنی بر به روز رسانی اطلاعات دریافت خواهید کرد.
		<br/>
		<b>این فرایند نیازمند اینترنت است</b>
	]]></string>
	
	<string name="font_warning"><![CDATA[
		<div style=\"text-align: center\"><b><font color=\"red\">توجه</font></b></div>
		فونت ایران‌سنس استفاده شده در این برنامه از سوی سازنده خریداری شده است و برای استفاده شما در این نرم افزار رایگان است.
		<br/>
		برای استفاده شخصی خودتان باید فونت را از
		<a href=\"https://fontiran.com\">فونت ایران</a>
		خریداری کنید.
		<br/>
		هرگونه استفاده از فونت استفاده شده در این نرم افزار شرعاً و قانونا حرام است.
	]]></string>
	
	<string name="settings_section_general">عمومی</string>
	<string name="settings_section_notifications">اعلان‌ها</string>
	<string name="settings_switch_text_app_update">به روز رسانی نرم‌افزار</string>
	<string name="settings_switch_text_new_data">محتوای جدید</string>
	
	<!-- help -->
	<string-array name="help_titles">
		<item>صفحه‌ی اصلی</item>
		<item>منوی کشویی</item>
		<item>لیست اسامی</item>
		<item>صفحه‌ی خواندن</item>
		<item>تاریخچه و جزئیات جنگ</item>
	</string-array>
	
	<string-array name="help_texts">
		<item><![CDATA[
			باز کردن منوی کشویی با کلیک بر روی آیکون
			<b>منو</b>
			یا کشیدن انگشت به سمت چپ
		]]></item>
		<item><![CDATA[
			<b>۱.</b>
			ارسال انتقادات و پیشنهادات شما عزیزان. (در صورت امکان)
			<br/>
			<b>۲.</b>
			ارسال مطالب شما عزیزان درباره شهدا یا جانبازانی که می‌شناسید. (در صورت امکان)
			<br/>
			<b>۳.</b>
			دریافت اطلاعات جدید در صورت وجود داشتن.
			<br/>
			<b>۴.</b>
			پاک کردن تمامی اطلاعات و بارگیری مجدد.
		]]></item>
		<item><![CDATA[
			<b>۱.</b>
			بازگشت
			<br/>
			<b>۲.</b>
			جستجو
			<br/>
			<b>۳.</b>
			بارگیری تصویر (در صورت
			<b>خاموش</b>
			بودن بارگیری خودکار)
			<br/>
			<b>۴.</b>
			رفتن به صفحه ذخیره شده
		]]></item>
		<item><![CDATA[
			<b>۱.</b>
			بارگیری عکس (در صورت
			<b>خاموش</b>
			بودن بارگیری خودکار)
			<br/>
			<b>۲.</b>
			ذخیره صفحه (و مقدار پیمایش شده)
		]]></item>
		<item><![CDATA[
			<b>۱.</b>
			رفتن به مقدار پیمایش شده
			<br/>
			<b>۲.</b>
			ذخیره مقدار پیمایش شده
		]]></item>
	</string-array>
</resources>