<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/drl_homePageActivity_container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="ir.androidDev.homeLandDefenders.HomePageActivity"
	tools:openDrawer="start">
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/home_page_bg"
		android:orientation="vertical">
		
		<androidx.appcompat.widget.Toolbar
			android:id="@+id/tlb_homePageActivity_toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/colorPrimary">
			
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginEnd="16dp">
				
				<ImageView
					android:id="@+id/iv_homePageActivity_openNav"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentStart="true"
					android:layout_centerVertical="true"
					android:clickable="true"
					android:focusable="true"
					android:foreground="?attr/selectableItemBackground"
					android:padding="4dp"
					app:srcCompat="@drawable/ic_baseline_menu_24" />
				
				<TextView
					android:id="@+id/tv_homePageActivity_titleTv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_alignParentEnd="true"
					android:layout_centerVertical="true"
					android:layout_marginStart="8dp"
					android:layout_toEndOf="@+id/iv_homePageActivity_openNav"
					android:ellipsize="marquee"
					android:marqueeRepeatLimit="marquee_forever"
					android:singleLine="true"
					android:text="@string/app_name"
					android:textColor="@android:color/white"
					android:textSize="20sp" />
			</RelativeLayout>
		</androidx.appcompat.widget.Toolbar>
		
		<FrameLayout
			android:id="@+id/fr_homePageActivity_frgContainer"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
			
			<ScrollView
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">
					
					<Button
						android:id="@+id/btn_homePageActivity_introduction"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:background="@drawable/home_page_btn1"
						android:ems="10"
						android:text="@string/home_page_button_0"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<Button
						android:id="@+id/btn_homePageActivity_biography"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:background="@drawable/home_page_btn2"
						android:ems="10"
						android:text="@string/home_page_button_1"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<Button
						android:id="@+id/btn_homePageActivity_testament"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:background="@drawable/home_page_btn3"
						android:ems="10"
						android:text="@string/home_page_button_2"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<Button
						android:id="@+id/btn_homePageActivity_operations"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:background="@drawable/home_page_btn4"
						android:ems="10"
						android:text="@string/home_page_button_3"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<Button
						android:id="@+id/btn_homePageActivity_warHistory"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:background="@drawable/home_page_btn5"
						android:ems="10"
						android:text="@string/home_page_button_4_5"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
					
					<Button
						android:id="@+id/btn_homePageActivity_veterans"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="16dp"
						android:layout_marginBottom="16dp"
						android:background="@drawable/home_page_btn6"
						android:ems="10"
						android:text="@string/home_page_button_6"
						android:textColor="@drawable/home_page_button_text_color"
						android:textSize="16sp"
						android:textStyle="bold" />
				</LinearLayout>
			</ScrollView>
		</FrameLayout>
	</LinearLayout>
	
	<com.google.android.material.navigation.NavigationView
		android:id="@+id/nvg_homeActivity_nav"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_gravity="start"
		android:background="@color/nvg_drawer_bgc"
		android:fitsSystemWindows="true"
		app:headerLayout="@layout/home_page_drawer_header"
		app:itemIconTint="@android:color/white"
		app:itemTextColor="@android:color/white"
		app:menu="@menu/home_page_nav_menu"
		app:theme="@style/ThemeOverlay.AppCompat.navTheme" />
</androidx.drawerlayout.widget.DrawerLayout>
