<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="ir.androidDev.homeLandDefenders.IntroductionActivity">
	
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/tlb_introductionActivity_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:background="@color/colorPrimary">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp">
			
			<ImageView
				android:id="@+id/iv_introductionActivity_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_centerVertical="true"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?attr/selectableItemBackground"
				android:padding="4dp"
				app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
			
			<TextView
				android:id="@+id/tv_introductionActivity_titleTv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_centerVertical="true"
				android:layout_marginStart="8dp"
				android:layout_toEndOf="@+id/iv_introductionActivity_back"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:singleLine="true"
				android:text="@string/string_introduction"
				android:textColor="@android:color/white"
				android:textSize="20sp" />
		</RelativeLayout>
	</androidx.appcompat.widget.Toolbar>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@+id/tv_introductionActivity_bottomTv"
		android:layout_below="@+id/tlb_introductionActivity_toolbar"
		android:layout_margin="16dp">
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/in_the_name_of_allah" />
			
			<TextView
				android:id="@+id/tv_introductionActivity_mainTv"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/introduction_full_text" />
		</LinearLayout>
	</ScrollView>
	
	<TextView
		android:id="@+id/tv_introductionActivity_bottomTv"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentBottom="true"
		android:background="@color/iran_red"
		android:gravity="center"
		android:text="@string/introduction_string_value_the_blood"
		android:textColor="@android:color/white"
		android:textSize="20sp"
		android:textStyle="bold" />
</RelativeLayout>