<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="ir.androidDev.homeLandDefenders.VeteransActivity">
	
	<androidx.appcompat.widget.Toolbar
		android:id="@+id/tlb_veteransActivity_toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:background="@color/colorPrimary">
		
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp">
			
			<ImageView
				android:id="@+id/iv_veteransActivity_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentStart="true"
				android:layout_centerVertical="true"
				android:clickable="true"
				android:focusable="true"
				android:foreground="?attr/selectableItemBackground"
				android:padding="4dp"
				app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
			
			<TextView
				android:id="@+id/tv_veteransActivity_titleTv"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_centerVertical="true"
				android:layout_marginStart="8dp"
				android:layout_toEndOf="@id/iv_veteransActivity_back"
				android:ellipsize="marquee"
				android:marqueeRepeatLimit="marquee_forever"
				android:singleLine="true"
				android:text="@string/veterans_string_title"
				android:textColor="@android:color/white"
				android:textSize="20sp" />
		</RelativeLayout>
	</androidx.appcompat.widget.Toolbar>
	
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/tv_veteransActivity_bottomTv"
		android:layout_below="@id/tlb_veteransActivity_toolbar">
		
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="16dp"
			android:text="@string/veterans_full_text" />
	</ScrollView>
	
	<TextView
		android:id="@+id/tv_veteransActivity_bottomTv"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:layout_alignParentBottom="true"
		android:background="@color/iran_red"
		android:gravity="center"
		android:text="@string/veterans_string_bottom"
		android:textColor="@android:color/white"
		android:textSize="20sp"
		android:textStyle="bold" />
</RelativeLayout>